--- a/Dev/Dev2.Activities/Dev2.Activities.csproj
+++ b/Dev/Dev2.Activities/Dev2.Activities.csproj
@@ -121,6 +121,7 @@
     </Compile>
     <Compile Include="Activities\DebugCopyException.cs" />
     <Compile Include="Activities\Debug\DebugTOParams.cs" />
+    <Compile Include="Activities\DsfBaseActivity.cs" />
     <Compile Include="Activities\DsfRecordsetLengthActivity.cs" />
     <Compile Include="Activities\Debug\DebugItemStaticDataParams.cs" />
     <Compile Include="Activities\Debug\DebugItemVariableParams.cs" />
